# COP4520_Project

./: CMakeLists.txt  README.md  imgui.ini
src/: BHTree.cpp  BHTree.hpp  barnesHut.cpp  barnesHut.hpp  direct_gravity.hpp  gravity.cpp  gravity.hpp  main.cpp  naive.hpp  naive_nbody.hpp  particle.cpp  particle.h  particle.hpp  particleSpawn.hpp
